--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -26,9 +26,9 @@
   <!-- Column -->
   <!-- Column -->
   <div class="col-sm-12 col-md-5">
-      <div class="card bg-info" (click)="loadICS()">
-        <!-- <a [routerLink]="['/icshome/']" > -->
-          <div class="card-body text-white" (click)="loadICS()">
+      <div class="card bg-info">
+        <a [routerLink]="['/icshome/']" >
+          <div class="card-body text-white">
               <div class="d-flex flex-row">
                   <div class="display-6 align-self-center">
                       <i class="ti-user"></i>
@@ -42,7 +42,7 @@
                   </div> -->
               </div>
           </div>
-          <!-- </a> -->
+          </a>
       </div>
   </div>
   <!-- Column -->
