--- a/src/app/ICS/ics-instrument-master/ics-instrument-master.component.html
+++ b/src/app/ICS/ics-instrument-master/ics-instrument-master.component.html
@@ -1,9 +1,43 @@
+
 <div class="row">
-  <div class="col-12">
-      <div class="card">
-          <div class="card-body">
-              {{subtitle}}  ICS works!
-          </div>
-      </div>
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-body">
+              <div class="d-flex no-block align-items-center">
+                <h4 class="card-title"> Instrument Master</h4>
+                <div class="ml-auto mb-2">
+                    <a class="btn btn-info" [routerLink]="['addinstrument']">  <i class="fas fa-plus-circle" style="color: azure;"></i> add inst </a>
+                </div>
+            </div>
+                     <div class="table-responsive">
+                          <ejs-grid [dataSource]='data' [allowSelection]='true'  [enableHover]='false'  [allowSorting]='true' e-gridheader=''>
+                            <e-columns>
+                                <e-column  headerText='Action' width='90'>
+                                <ng-template #template let-data>
+                                    <div class="loc">
+                                      <button cssClass='small'  ejs-button (click)="editInstrument()">  <span class="e-icons e-pencil"></span></button>
+                                    </div>
+                                </ng-template>
+                            </e-column>
+                            <e-column field='Sr No' headerText='Sr No' textAlign='Right' width=90></e-column>
+                            <e-column field='Edit Instrument' headerText='Edit Instrument' width=150></e-column>
+                            <e-column field='Instrument Id' headerText='Instrument Id' textAlign='Right' format='C2' width=150></e-column>
+                            <e-column field='Instrument Name' headerText='Instrument Name' textAlign='Right' format='yMd' width=150></e-column>
+                            <e-column field='Make' headerText='Make' textAlign='Right' width=90></e-column>
+                            <e-column field='Model' headerText='Model' width=120></e-column>
+                            <e-column field='Avaibility' headerText='Avaibility' textAlign='Right' format='C2' width=120></e-column>
+                            <e-column field='URS No. & Link' headerText='URS No. & Link' textAlign='Right' format='yMd' width=150></e-column>
+                            <e-column field='PO No. & Link' headerText='PO No. & Link' textAlign='Right' width=150></e-column>
+                            <e-column field='Delivery Date' headerText='Delivery Date' width=150></e-column>
+                            <e-column field='Manudacturers Sr.No'   headerText='Manudacturers Sr.No' textAlign='Right' format='C2' width=200></e-column>
+                            </e-columns>
+                            </ejs-grid>
+                </div>
+            </div>
+        </div>
+    </div>
   </div>
-</div>
+  
+  
+  
+  
