--- a/src/app/ICS/ics-parameter/ics-parameter.component.html
+++ b/src/app/ICS/ics-parameter/ics-parameter.component.html
@@ -1,1 +1,73 @@
-<p>ics-parameter works!</p>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-body">
+              <div class="d-flex no-block align-items-center">
+                <h4 class="card-title">Add Parameter</h4>
+            </div>
+  
+            <hr>
+  
+            <button ejs-dropdownbutton [items]='items' content='Inst Id' style="color: cadetblue;"></button>
+            <button ejs-dropdownbutton [items]='items1' content='Inst Name' style="color: cadetblue;"></button>
+            <!-- <a class="btn btn-warn" >  <i class="fas fa-plus-circle" style="color: cadetblue;"></i> Add Parameter</a> -->
+            <button class="btn btn-outline-primary mb-2 mr-2" (click)="addparameter(content3)">Add Parameter</button>
+            <div class="col-md-12">
+                <div class="card">
+                  <div class="card-body">
+                    <!-- <h3 class="card-title">Modal With Options</h3> -->
+                    <!-- <h6 class="card-subtitle">You can pass an existing component as content of the modal window.</h6> -->
+                    <ng-template #content3 let-modal>
+
+                      <div class="modal-header">
+                        <h4 class="modal-title">Add Parameter</h4>
+                        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+
+                      <div class="modal-body">
+                        
+                          One fine body&hellip;
+                        
+                      </div>
+
+
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+                      </div>
+                    </ng-template>
+
+                    <!-- <button class="btn btn-outline-primary mb-2 mr-2" (click)="addparameter(content3)">Add Parameter</button> -->
+                  </div>
+                </div>
+              </div>
+              
+              
+
+
+
+
+
+
+            <hr>
+  
+            <div class="table-responsive">
+                <ejs-grid [dataSource]='data' [allowSelection]='true'  [enableHover]='false'  [allowSorting]='true' e-gridheader=''>
+                    <e-columns>
+                  <e-column field='Sr No' headerText='Sr No' textAlign='Right' width=90></e-column>
+                  <e-column field='Parameter' headerText='Parameter' width=150></e-column>
+                  <e-column field='Nominal Value' headerText='Nominal Value' textAlign='Right' format='C2' width=150></e-column>
+                  <e-column field='Upper Range' headerText='Upper Range' textAlign='Right' format='yMd' width=150></e-column>
+                  <e-column field='Lower Range' headerText='Lower Range' textAlign='Right' width=90></e-column>
+                  </e-columns>
+                  </ejs-grid>
+      </div>
+  
+          
+            </div>
+        </div>
+    </div>
+  </div>
+  
+  
