--- a/src/app/ICS/ics-maintenance/ics-maintenance.component.html
+++ b/src/app/ICS/ics-maintenance/ics-maintenance.component.html
@@ -8,10 +8,10 @@
   
             <hr>
   
-            <button ejs-dropdownbutton [items]='items' content='Inst Id' style="color: cadetblue;"></button>
-            <button ejs-dropdownbutton [items]='items1' content='Inst Name' style="color: cadetblue;"></button>
+            <button ejs-dropdownbutton [items]='items' content='Inst Id' style="color: rgba(54, 32, 252, 0.822);"></button>
+            <button ejs-dropdownbutton [items]='items1' content='Inst Name' style="color: rgba(54, 32, 252, 0.822);"></button>
             <!-- <a class="btn btn-warn" >  <i class="fas fa-plus-circle" style="color: cadetblue;"></i> Add Parameter</a> -->
-            <button class="btn btn-outline-primary mb-2 mr-2" (click)="adddetails(content3)">Add Details</button>
+            <button class="btn-btn-info" (click)="adddetails(content3)" style="color: rgba(54, 32, 252, 0.822);"><i class="fas fa-plus-circle"></i>Add Details</button>
             <div class="col-md-12">
                 <div class="card">
                   <div class="card-body">
