--- a/src/app/ICS/ics-qualification/ics-qualification.component.html
+++ b/src/app/ICS/ics-qualification/ics-qualification.component.html
@@ -8,10 +8,12 @@
   
             <hr>
   
-            <button ejs-dropdownbutton [items]='items' content='Inst Id' style="color: cadetblue;"></button>
-            <button ejs-dropdownbutton [items]='items1' content='Inst Name' style="color: cadetblue;"></button>
+            <button ejs-dropdownbutton [items]='items' content='Inst Id' style="color: rgba(54, 32, 252, 0.822);"></button>
+            <button ejs-dropdownbutton [items]='items1' content='Inst Name' style="color: rgba(54, 32, 252, 0.822);"></button>
             <!-- <a class="btn btn-warn" >  <i class="fas fa-plus-circle" style="color: cadetblue;"></i> Add Parameter</a> -->
-            <button class="btn btn-outline-primary mb-2 mr-2" (click)="addqualification(content3)">Add Qualification</button>
+            <button class="btn-btn-info" (click)="addqualification(content3)" style="color: rgba(54, 32, 252, 0.822);"><i class="fas fa-plus-circle"></i>Add Qualification</button>
+
+            <button class="btn-btn-info" style="color: rgba(54, 32, 252, 0.822);"><i class="fa fa-file-excel-o"></i>Export</button>
             <div class="col-md-12">
                 <div class="card">
                   <div class="card-body">
@@ -27,7 +29,11 @@
                       </div>
 
                       <div class="modal-body">
+                        
+                       <button ejs-dropdownbutton [items]='items2' content='IQ' style="color: cadetblue;"></button>
+                       <hr color="black">
                        
+                      
                       </div>
 
 
