--- a/src/app/ICS/ics-parameter/ics-parameter.component.html
+++ b/src/app/ICS/ics-parameter/ics-parameter.component.html
@@ -40,25 +40,25 @@
       <form class="form-horizontal">
         <div class="card-body">
             <div class="form-group row">
-                <label for="fname" class="col-sm-3 control-label col-form-label">Parameter</label>
+                <label for="fname" class="col-sm-3 control-label col-form-label">Parameter :</label>
                 <div class="col-sm-9">
                     <input type="text" class="form-control" id="parameter" placeholder="">
                 </div>
             </div>
             <div class="form-group row">
-                <label for="lname" class="col-sm-3 control-label col-form-label">Nominal Value</label>
+                <label for="lname" class="col-sm-3 control-label col-form-label">Nominal Value :</label>
                 <div class="col-sm-9">
                     <input type="text" class="form-control" id="nominalValue" placeholder="">
                 </div>
             </div>
             <div class="form-group row">
-                <label for="email1" class="col-sm-3 control-label col-form-label">Nominal Upper range</label>
+                <label for="email1" class="col-sm-3 control-label col-form-label">Nominal Upper range :</label>
                 <div class="col-sm-9">
                     <input type="email" class="form-control" id="nominalUpperRange" placeholder="">
                 </div>
             </div>
             <div class="form-group row">
-                <label for="cono1" class="col-sm-3 control-label col-form-label">Nominal Lower range</label>
+                <label for="cono1" class="col-sm-3 control-label col-form-label">Nominal Lower range :</label>
                 <div class="col-sm-9">
                     <input type="text" class="form-control" id="nominalLowerRange" placeholder="">
                 </div>
