--- a/src/app/ICS/ics-qualification/ics-qualification.component.html
+++ b/src/app/ICS/ics-qualification/ics-qualification.component.html
@@ -44,11 +44,11 @@
 
   <div class="modal-body">
     <div class="form-group row">
-        <label for="fname" class="col-sm-2 control-label col-form-label">Equipment Name </label>
+        <label for="fname" class="col-sm-2 control-label col-form-label">Equipment Name : </label>
         <div class="col-sm-4">
             <input type="text" class="form-control" id="parameter" placeholder="">
         </div>
-        <label for="fname" class="col-sm-3 control-label col-form-label ml-auto offset-1 p-l-40">Qualification Type </label>
+        <label for="fname" class="col-sm-3 control-label col-form-label ml-auto offset-1 p-l-40">Qualification Type :</label>
         <div class="col-sm-2 m-0 p-0">
           <button ejs-dropdownbutton [items]='items2' content='IQ' style="color: cadetblue;"></button>
         </div>
@@ -57,20 +57,20 @@
     <form class="form-horizontal">
       <div class="card-body border">
           <div class="form-group row">
-              <label for="fname" class="col-sm-3 control-label col-form-label">Date of Qualification</label>
+              <label for="fname" class="col-sm-3 control-label col-form-label">Date of Qualification :</label>
               <div class="col-sm-3">
                   <!-- <input type="text" class="form-control" id="parameter" placeholder=""> -->
                   <ejs-datepicker [value]='dateValue' placeholder='Enter date'></ejs-datepicker>
               </div>
           </div>
           <div class="form-group row">
-              <label for="lname" class="col-sm-3 control-label col-form-label">Note</label>
+              <label for="lname" class="col-sm-3 control-label col-form-label">Note :</label>
               <div class="col-sm-9">
                   <textarea class="form-control cye-lf-tag" rows="5"></textarea>
               </div>
           </div>
           <div class="form-group row">
-              <label for="email1" class="col-sm-3 control-label col-form-label">Attachment</label>
+              <label for="email1" class="col-sm-3 control-label col-form-label">Attachment :</label>
               <div class="col-sm-9">
                 <ejs-uploader #defaultupload [autoUpload]='false' [dropArea]='dropEle' [asyncSettings]='path' (success)="onUploadSuccess($event)" (failure)="onUploadFailure($event)"></ejs-uploader>
                   <small class="form-text text-danger">* multiple attachment</small>
