--- a/src/app/EQS/eqs-qualification/eqs-qualification.component.html
+++ b/src/app/EQS/eqs-qualification/eqs-qualification.component.html
@@ -4,35 +4,85 @@
           <div class="card-body">
             <div class="d-flex no-block align-items-center">
               <h4 class="card-title">Qualification</h4>
-          </div>
-
-          <hr>
-          <div class="row">
-              <div class="col-md-12">
-                <div class="btn-group">
-                  <button  ejs-dropdownbutton [items]='items' content='Drop Down 1' style="color: cadetblue;"></button>
-                 <button class="ml-2" ejs-dropdownbutton [items]='items' content='Drop Down 2' style="color: cadetblue;"></button>
-                  <button type="button" class="btn btn-success ml-2"  ejs-button>View</button>
-                </div>
-              </div>
-          </div>
-            <div class="col-lg-12">
-                <div class="card">
-                  <div class="card-body">
-                          <ejs-grid [dataSource]='data' [allowSelection]='true'  [enableHover]='false'  [allowSorting]='true'>
-                            <e-columns>
-                                <e-column field='OrderID' headerText='Order ID' textAlign='Right' width=90></e-column>
-                                <e-column field='CustomerID' headerText='Customer ID' width=120></e-column>
-                                <e-column field='Freight' headerText='Freight' textAlign='Right' format='C2' width=90></e-column>
-                                <e-column field='OrderDate' headerText='Order Date' textAlign='Right' format='yMd' width=120></e-column>
-                            </e-columns>
-                            </ejs-grid>
-                          </div>
-                </div>
             </div>
+          <hr>
+          <button class="mr-2" ejs-dropdownbutton [items]='items' content='Eqp Id' style="color: rgba(54, 32, 252, 0.822);"></button>
+          <button class="mr-2" ejs-dropdownbutton [items]='items1' content='Eqp Name' style="color: rgba(54, 32, 252, 0.822);"></button>
+          <!-- <a class="btn btn-warn" >  <i class="fas fa-plus-circle" style="color: cadetblue;"></i> Add Parameter</a> -->
+          <button  class="btn-btn-info mr-2 float-right" style="color: rgba(54, 32, 252, 0.822);"><i class="ti-export"></i> Export</button>
+          <button  class="btn-btn-info mr-2 float-right" (click)="openAddQualificationModal(qualificationModal)" style="color: rgba(54, 32, 252, 0.822);"><i class="fas fa-plus-circle"></i>Add Qualification</button>
+          <hr>
+          <div class="table-responsive">
+              <ejs-grid [dataSource]='data' [allowSelection]='true'  [enableHover]='false'  [allowSorting]='true' e-gridheader=''>
+                  <e-columns>
+                <e-column field='Sr No' headerText='Sr No' textAlign='Right' width=90></e-column>
+                <e-column field='Eqp Id' headerText='Eqp Id' width=150></e-column>
+                <e-column field='Eqp Name' headerText='Eqp Name' textAlign='Right' format='C2' width=150></e-column>
+                <e-column field='Last Perform Date' headerText='Last Perform Date' textAlign='Right' format='yMd' width=200></e-column>
+                <e-column field='Next Due Date' headerText='Next Due Date' textAlign='Right' width=170></e-column>
+                <e-column field='Date Of Qualification' headerText='Date Of Qualification' textAlign='Right' width=170></e-column>
+                <e-column field='Type Of Qualification' headerText='Type Of Qualification' width=170></e-column>
+                <e-column field='Attachment' headerText='Attachment' textAlign='Right' format='C2' width=150></e-column>
+                <e-column field='Notes' headerText='Notes' textAlign='Right' format='yMd' width=120></e-column>
+                <e-column field='Edit' headerText='Edit' textAlign='Right' width=90></e-column>
+              </e-columns>
+                </ejs-grid>
           </div>
-
           </div>
       </div>
   </div>
+</div>
+
+<ng-template #qualificationModal let-modal>
+
+<div class="modal-header">
+  <h4 class="modal-title">Add Qualification</h4>
+  <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+<div class="modal-body">
+  <div class="form-group row">
+      <label for="fname" class="col-sm-2 control-label col-form-label">Equipment Name : </label>
+      <div class="col-sm-4">
+          <input type="text" class="form-control" id="parameter" placeholder="">
+      </div>
+      <label for="fname" class="col-sm-3 control-label col-form-label ml-auto offset-1 p-l-40">Qualification Type :</label>
+      <div class="col-sm-2 m-0 p-0">
+        <button ejs-dropdownbutton [items]='items2' content='IQ' style="color: cadetblue;"></button>
+      </div>
+</div>
+  <hr color="black">
+  <form class="form-horizontal">
+    <div class="card-body border">
+        <div class="form-group row">
+            <label for="fname" class="col-sm-3 control-label col-form-label">Date of Qualification :</label>
+            <div class="col-sm-3">
+                <!-- <input type="text" class="form-control" id="parameter" placeholder=""> -->
+                <ejs-datepicker [value]='dateValue' placeholder='Enter date'></ejs-datepicker>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="lname" class="col-sm-3 control-label col-form-label">Note :</label>
+            <div class="col-sm-9">
+                <textarea class="form-control cye-lf-tag" rows="5"></textarea>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="email1" class="col-sm-3 control-label col-form-label">Attachment :</label>
+            <div class="col-sm-9">
+              <ejs-uploader #defaultupload [autoUpload]='false' [dropArea]='dropEle' [asyncSettings]='path' (success)="onUploadSuccess($event)" (failure)="onUploadFailure($event)"></ejs-uploader>
+                <small class="form-text text-danger">* multiple attachment</small>
+            </div>
+        </div>
+    </div>
+  </form>
+</div>
+<div class="modal-footer">
+  <button type="button" class="btn btn-info waves-effect waves-light">Add</button>
+  <button type="button" class="btn btn-info waves-effect waves-light" (click)="modal.close('Close click')">Close</button>
+</div>
+</ng-template>
+
 
