--- a/src/app/ICS/ics-maintenance/ics-maintenance.component.html
+++ b/src/app/ICS/ics-maintenance/ics-maintenance.component.html
@@ -85,7 +85,7 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-info waves-effect waves-light">Add</button>
-    <button type="button" class="btn btn-info waves-effect waves-light" (click)="modal.close('Close click')">Close</button>
+    <button type="button" class="btn btn-info waves-effect waves-light" (click)="modal.close('Close click')">Cancel</button>
   </div>
 </ng-template>
 
