--- a/src/app/ICS/ics-parameter/ics-parameter.component.html
+++ b/src/app/ICS/ics-parameter/ics-parameter.component.html
@@ -67,7 +67,8 @@
       </form>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-info waves-effect waves-light" (click)="modal.close('Close click')">Add Parameter</button>
+      <button type="button" class="btn btn-info waves-effect waves-light">Add</button>
+      <button type="button" class="btn btn-info waves-effect waves-light" (click)="modal.close('Close click')">Cancel</button>
     </div>
 </ng-template>
 
