--- a/src/app/EQS/eqs-dashboard/eqs-dashboard.component.html
+++ b/src/app/EQS/eqs-dashboard/eqs-dashboard.component.html
@@ -8,8 +8,8 @@
 
           <hr>
 
-          <button ejs-dropdownbutton [items]='items' content='Drop Down 1' style="color: cadetblue;"></button>
-          <button ejs-dropdownbutton [items]='items' content='Drop Down 2' style="color: cadetblue;"></button>
+          <button ejs-dropdownbutton [items]='items' content='Eqp List' style="color: rgba(54, 32, 252, 0.822);"></button>
+          <button ejs-dropdownbutton [items]='items1' content='Parameter List' style="color: rgba(54, 32, 252, 0.822);"></button>
           <hr>
 
           <div class="row">
