--- a/src/app/EQS/eqs-qualification/eqs-qualification.component.html
+++ b/src/app/EQS/eqs-qualification/eqs-qualification.component.html
@@ -50,7 +50,7 @@
       </div>
       <label for="fname" class="col-sm-3 control-label col-form-label ml-auto offset-1 p-l-40">Qualification Type :</label>
       <div class="col-sm-2 m-0 p-0">
-        <button ejs-dropdownbutton [items]='items2' content='IQ' style="color: cadetblue;"></button>
+        <button ejs-dropdownbutton [items]='items2' content='IQ' style="color: rgba(54, 32, 252, 0.822);"></button>
       </div>
 </div>
   <hr color="black">
@@ -81,7 +81,7 @@
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-info waves-effect waves-light">Add</button>
-  <button type="button" class="btn btn-info waves-effect waves-light" (click)="modal.close('Close click')">Close</button>
+  <button type="button" class="btn btn-info waves-effect waves-light" (click)="modal.close('Close click')">Cancel</button>
 </div>
 </ng-template>
 
