--- a/src/app/EQS/eqs-reports/equipment-list/equipment-list.component.html
+++ b/src/app/EQS/eqs-reports/equipment-list/equipment-list.component.html
@@ -14,11 +14,11 @@
                 <ejs-grid [dataSource]='data' [allowSelection]='true'  [enableHover]='false'  [allowSorting]='true' e-gridheader=''>
                     <e-columns>
                   <e-column field='Sr No' headerText='Sr No' textAlign='Right' width=90></e-column>
-                  <e-column field='CustomerID' headerText='CustomerID' width=150></e-column>
-                  <e-column field='FrequencyOfCalibration' headerText='Inst Name' textAlign='Right' format='C2' width=150></e-column>
-                  <e-column field='StartDate' headerText='StartDate' textAlign='Right' format='yMd' width=200></e-column>
-                  <e-column field='EndDate' headerText='EndDate' textAlign='Right' format='yMd' width=200></e-column>
-                  <e-column field='DueDate' headerText='DueDate' textAlign='Right' format='yMd' width=200></e-column>
+                  <e-column field='EquipmentId' headerText='Equipment Id' width=150></e-column>
+                  <e-column field='FrequencyOfCalibration' headerText='Frequency Of Calibration ' textAlign='Right' format='C2' width=200></e-column>
+                  <e-column field='StartDate' headerText='Start Date' textAlign='Right' format='yMd' width=200></e-column>
+                  <e-column field='EndDate' headerText='End Date' textAlign='Right' format='yMd' width=200></e-column>
+                  <e-column field='DueDate' headerText='Due Date' textAlign='Right' format='yMd' width=200></e-column>
                   <e-column field='Purpose' headerText='Purpose' textAlign='Right' width=170></e-column>
                 </e-columns>
                   </ejs-grid>
