--- a/src/app/ICS/ics-qualification/ics-qualification.component.html
+++ b/src/app/ICS/ics-qualification/ics-qualification.component.html
@@ -72,8 +72,10 @@
           <div class="form-group row">
               <label for="email1" class="col-sm-3 control-label col-form-label">Attachment :</label>
               <div class="col-sm-9">
-                <ejs-uploader #defaultupload [autoUpload]='false' [dropArea]='dropEle' [asyncSettings]='path' (success)="onUploadSuccess($event)" (failure)="onUploadFailure($event)"></ejs-uploader>
-                  <small class="form-text text-danger">* multiple attachment</small>
+                <!-- <ejs-uploader #defaultupload [autoUpload]='false' [dropArea]='dropEle' [asyncSettings]='path' (success)="onUploadSuccess($event)" (failure)="onUploadFailure($event)"></ejs-uploader>
+                  <small class="form-text text-danger">* multiple attachment</small>  -->
+                  <ejs-filemanager id='file-manager' [ajaxSettings]='ajaxSettings' [view]='view' (created)='onCreate($event)'>
+                  </ejs-filemanager>
               </div>
           </div>
       </div>
