--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,7 @@
 /* Calendar */
 @import '../node_modules/@syncfusion/ej2-lists/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-angular-calendars/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-angular-filemanager/styles/material.css';
 
 /* #toaster */
    #toast-container > div {
