--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,7 +4,7 @@
 <div class="row">
   <!-- Column -->
   <div class="col-sm-12 col-md-5">
-      <div class="card bg-info">
+      <div class="card bg-cyan">
            <div class="card-body text-white">
               <div class="d-flex flex-row">
                   <div class="align-self-center display-6">
@@ -26,7 +26,7 @@
   <!-- Column -->
   <!-- Column -->
   <div class="col-sm-12 col-md-5">
-      <div class="card bg-info">
+      <div class="card bg-cyan">
         <a [routerLink]="['/icshome/']" >
           <div class="card-body text-white">
               <div class="d-flex flex-row">
@@ -34,7 +34,7 @@
                       <i class="ti-user"></i>
                   </div>
                   <div class="p-10 align-self-center">
-                      <h4 class="m-b-0">Instrument Cal Sys</h4>
+                      <h4 class="m-b-0">Instrument Calibration System</h4>
                       <!-- <span>Users</span> -->
                   </div>
                   <!-- <div class="ml-auto align-self-center">
@@ -48,7 +48,7 @@
   <!-- Column -->
   <!-- Column -->
   <div class="col-sm-12 col-md-5">
-      <div class="card bg-info">
+      <div class="card bg-cyan">
         <a [routerLink]="['/eqshome/']" >
           <div class="card-body text-white">
               <div class="d-flex flex-row">
@@ -56,7 +56,7 @@
                       <i class="ti-calendar"></i>
                   </div>
                   <div class="p-10 align-self-center">
-                      <h4 class="m-b-0">Equipment Qual Sys</h4>
+                      <h4 class="m-b-0">Equipment Qualification System</h4>
                       <!-- <span>My birthday</span> -->
                   </div>
                   <!-- <div class="ml-auto align-self-center">
@@ -70,14 +70,14 @@
   <!-- Column -->
   <!-- Column -->
   <div class="col-sm-12 col-md-5">
-      <div class="card bg-info">
+      <div class="card bg-cyan">
           <div class="card-body text-white">
               <div class="d-flex flex-row">
                   <div class="display-6 align-self-center">
                       <i class="ti-settings"></i>
                   </div>
                   <div class="p-10 align-self-center">
-                      <h4 class="m-b-0">Inventory Mang Sys</h4>
+                      <h4 class="m-b-0">Inventory Management System</h4>
                       <!-- <span>pending</span> -->
                   </div>
                   <!-- <div class="ml-auto align-self-center">
