--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -12,7 +12,7 @@ $theme-dark: #212529;
 
 $skin1: #2962ff;
 $skin2: #fe5419;
-$skin3: #00b0ff;
+$skin3: #2f90eb;
 $skin4: #6659f7;
 $skin5: #414755;
 $skin6: #fff;
@@ -117,7 +117,7 @@ $orange: #fb8c00 !default;
 $yellow: #ffbc34 !default;
 $green: #36bea6 !default;
 $teal: #20c997 !default;
-$cyan: #4fc3f7 !default;
+$cyan: #2f90eb !default;
 $primary: #7460ee !default;
 $text-muted: $gray-500 !default;
 
