--- a/src/app/ICS/ics-maintenance/ics-maintenance.component.html
+++ b/src/app/ICS/ics-maintenance/ics-maintenance.component.html
@@ -1,31 +1,34 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
+          <div class="c_header">
+            <h4>Maintainence</h4>
+                            </div>
             <div class="card-body">
               <div class="d-flex no-block align-items-center">
-                <h4 class="card-title">Maintenance</h4>
+                <h4 class="card-title"></h4>
             </div>
   
-            <hr>
+            
   
-            <button class="mr-2" ejs-dropdownbutton [items]='items' content='Inst Id' style="color: rgba(54, 32, 252, 0.822);"></button>
-            <button class="mr-2" ejs-dropdownbutton [items]='items1' content='Inst Name' style="color: rgba(54, 32, 252, 0.822);"></button>
+            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items' content='Inst Id'></button>
+            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items1' content='Inst Name'></button>
             <!-- <a class="btn btn-warn" >  <i class="fas fa-plus-circle" style="color: cadetblue;"></i> Add Parameter</a> -->
-            <button  class="btn-btn-info mr-2 float-right" style="color: rgba(54, 32, 252, 0.822);"><i class="ti-export"></i> Export</button>
-            <button class="btn-btn-info mr-2 float-right" (click)="adddetails(content3)" style="color: rgba(54, 32, 252, 0.822);"><i class="fas fa-plus-circle"></i>Add Details</button>
+            <button  class="btn-btn-info mr-2 float-right btn_style"><i class="ti-export"></i> Export</button>
+            <button class="btn-btn-info mr-2 float-right btn_style" (click)="adddetails(content3)"><i class="fas fa-plus-circle"></i>Add Details</button>
            <hr>
             <div class="table-responsive">
               <ejs-grid [dataSource]='data' [allowSelection]='true'  [enableHover]='false'  [allowSorting]='true' e-gridheader=''>
                   <e-columns>
-                <e-column field='Sr No' headerText='Sr No' textAlign='Right' width=90></e-column>
-                <e-column field='Inst Id' headerText='Inst Id' width=150></e-column>
-                <e-column field='Inst Name' headerText='Inst Name' textAlign='Right' format='C2' width=150></e-column>
-                <e-column field='Last Occur Date' headerText='Last Occur Date' textAlign='Right' format='yMd' width=200></e-column>
-                <e-column field='Next Due Date' headerText='Next Due Date' textAlign='Right' width=170></e-column>
-                <e-column field='Type Of Breakdown' headerText='Type Of Breakdown' textAlign='Right' width=170></e-column>
-                <e-column field='Attachment' headerText='Attachment' textAlign='Right' format='C2' width=150></e-column>
-                <e-column field='Notes' headerText='Notes' textAlign='Right' format='yMd' width=120></e-column>
-                <e-column field='Edit' headerText='Edit' textAlign='Right' width=90></e-column>
+                <e-column field='SrNo' headerText='Sr No' textAlign='Left' width=90></e-column>
+                <e-column field='InstId' headerText='Inst Id' width=150></e-column>
+                <e-column field='InstName' headerText='Inst Name' textAlign='Left' format='C2' width=150></e-column>
+                <e-column field='TypeOfAction' headerText='Type Of Action' textAlign='Left' width=170></e-column>
+                <e-column field='PerformanceDate' headerText='Performance Date' textAlign='Left' format='yMd' width=200></e-column>
+                <e-column field='NextDueDate' headerText='Next Due Date' textAlign='Left' width=170></e-column>
+                <e-column field='Attachment' headerText='Attachment' textAlign='Left' format='C2' width=150></e-column>
+                <e-column field='Notes' headerText='Notes' textAlign='Left' format='yMd' width=120></e-column>
+                <e-column field='Edit' headerText='Edit' textAlign='Left' width=90></e-column>
               </e-columns>
                 </ejs-grid>
     </div>
@@ -39,8 +42,8 @@
                   
 <ng-template #content3 let-modal>
 
-  <div class="modal-header">
-    <h4 class="modal-title">Maintenance Details</h4>
+  <div class="modal_header">
+    <h6 class="modal-title">Maintenance Details</h6>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -48,20 +51,20 @@
 
   <div class="modal-body">
     <div class="form-group row">
-        <label for="fname" class="col-sm-2 control-label col-form-label">Equipment Name </label>
+        <label for="fname" class="col-sm-2 control-label col-form-label">Instrument Name </label>
         <div class="col-sm-4">
             <input type="text" class="form-control" id="parameter" placeholder="">
         </div>
         <label for="fname" class="col-sm-3 control-label col-form-label ml-auto offset-1 p-l-40"> Type :</label>
-        <div class="col-sm-2 m-0 p-0">
-          <button ejs-dropdownbutton [items]='items2' content='IQ' style="color: cadetblue;"></button>
+        <div class="col-sm-2 m-0 p-0 dropdown_style">
+          <button ejs-dropdownbutton [items]='items2' content='Action'></button>
         </div>
   </div>
     <hr color="black">
     <form class="form-horizontal">
       <div class="card-body border">
           <div class="form-group row">
-              <label for="fname" class="col-sm-3 control-label col-form-label">Last Occur Date :</label>
+              <label for="fname" class="col-sm-4 control-label col-form-label">Performance Date :</label>
               <div class="col-sm-3">
                   <!-- <input type="text" class="form-control" id="parameter" placeholder=""> -->
                   <ejs-datepicker [value]='dateValue' placeholder='Enter date'></ejs-datepicker>
@@ -70,22 +73,25 @@
           <div class="form-group row">
               <label for="lname" class="col-sm-3 control-label col-form-label">Note :</label>
               <div class="col-sm-9">
-                  <textarea class="form-control cye-lf-tag" rows="5"></textarea>
+                <input type="text" class="form-control" id="parameter" placeholder="">
+                  <!-- <textarea class="form-control cye-lf-tag" rows="5"></textarea> -->
               </div>
           </div>
           <div class="form-group row">
               <label for="email1" class="col-sm-3 control-label col-form-label">Attachment :</label>
               <div class="col-sm-9">
                 <ejs-uploader #defaultupload [autoUpload]='false' [dropArea]='dropEle' [asyncSettings]='path' (success)="onUploadSuccess($event)" (failure)="onUploadFailure($event)"></ejs-uploader>
-                  <small class="form-text text-danger">* multiple attachment</small>
+                  <small class="form-text text-cyan">* multiple attachment</small>
               </div>
           </div>
       </div>
     </form>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-info waves-effect waves-light">Add</button>
-    <button type="button" class="btn btn-info waves-effect waves-light" (click)="modal.close('Close click')">Cancel</button>
+    <button class="btn-btn-info btn_style">Add</button>
+    <button class="btn-btn-info btn_style"(click)="modal.close('Close click')">Cancel</button>
+    <!-- <button type="button" class="btn btn-info waves-effect waves-light">Add</button>
+    <button type="button" class="btn btn-info waves-effect waves-light" (click)="modal.close('Close click')">Cancel</button> -->
   </div>
 </ng-template>
 
