--- a/src/app/layouts/eqsfull/full.component.html
+++ b/src/app/layouts/eqsfull/full.component.html
@@ -28,23 +28,23 @@
             <!-- Logo -->
             <!-- ============================================================== -->
             <a class="navbar-brand" href="/">
-                <!-- Logo icon -->
-                <b class="logo-icon">
-                    <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
-                    <!-- Dark Logo icon -->
-                    <img src="assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
-                    <!-- Light Logo icon -->
-                    <img src="assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
-                </b>
-                <!--End Logo icon -->
-                <!-- Logo text -->
-                <span class="logo-text">
-                    <!-- dark Logo text -->
-                    <!-- <img src="assets/images/logo-text.png" alt="homepage" class="dark-logo" /> -->
-                    <!-- Light Logo text -->
-                    <img src="assets/images/logo-light-text.png" class="light-logo" alt="homepage" />
-                </span>
-            </a>
+              <!-- Logo icon -->
+              <b class="logo-icon">
+                  <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
+                  <!-- Dark Logo icon -->
+                  <img src="assets/images/logo-icon.png"  class="dark-logo" />
+                  <!-- Light Logo icon -->
+                  <img src="assets/images/logo-light-icon.png" class="light-logo" />
+              </b>
+              <!--End Logo icon -->
+              <!-- Logo text -->
+              <span class="logo-text">
+                  <!-- dark Logo text -->
+                  <img src="assets/images/logo-text.png"  class="dark-logo" />
+                  <!-- Light Logo text -->
+                  <img src="assets/images/logo-light-text.png" class="light-logo" alt="homepage" />
+              </span>
+          </a>
             <!-- ============================================================== -->
             <!-- End Logo -->
             <!-- ============================================================== -->
