--- a/src/app/layouts/icsfull/icsfull.component.html
+++ b/src/app/layouts/icsfull/icsfull.component.html
@@ -23,17 +23,17 @@
                 <b class="logo-icon">
                     <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                     <!-- Dark Logo icon -->
-                    <img src="assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
+                    <img src="assets/images/logo-icon.png"  class="dark-logo" />
                     <!-- Light Logo icon -->
-                    <img src="assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
+                    <img src="assets/images/logo-light-icon.png" class="light-logo" />
                 </b>
                 <!--End Logo icon -->
                 <!-- Logo text -->
                 <span class="logo-text">
                     <!-- dark Logo text -->
-                    <!-- <img src="assets/images/logo-text.png" alt="homepage" class="dark-logo" /> -->
+                    <img src="assets/images/logo-text.png"  class="dark-logo" />
                     <!-- Light Logo text -->
-                    <!-- <img src="assets/images/logo-light-text.png" class="light-logo" alt="homepage" /> -->
+                    <img src="assets/images/logo-light-text.png" class="light-logo" alt="homepage" />
                 </span>
             </a>
             <!-- ============================================================== -->
@@ -58,13 +58,14 @@
     <!-- ============================================================== -->
     <!-- Left Sidebar - style you can find in sidebar.scss  -->
     <!-- ============================================================== -->
-    <aside class="left-sidebar" [attr.data-sidebarbg]="options.sidebarbg" (mouseover)="Logo()" (mouseout)="Logo()">
+    <aside class="left-sidebar" [attr.data-sidebarbg]="options.sidebarbg" (mouseover)="Logo()" (mouseout)="Logo()"> 
         <!-- Sidebar scroll-->
-        <div class="scroll-sidebar" [perfectScrollbar]="config">
-            <app-sidebar-ics></app-sidebar-ics>
-        </div>
+         <div class="scroll-sidebar" [perfectScrollbar]="config"> 
+             <app-sidebar-ics></app-sidebar-ics> 
+         </div> 
         <!-- End Sidebar scroll-->
-    </aside>
+     </aside> 
+  
     <!-- ============================================================== -->
     <!-- End Left Sidebar - style you can find in sidebar.scss  -->
     <!-- ============================================================== -->
