--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,14 @@
 <div class="auth-wrapper d-flex no-block justify-content-center align-items-center">
     <div>
-        <div class="alert alert-primary">
+        <!-- <div class="alert alert-primary">
             <span class="mr-1">Username : admin</span> |
             <span class="ml-1">Password : admin123</span>
-        </div>
+        </div> -->
         <div class="auth-box">
             <div id="loginform" [ngClass]="{'d-none': recoverform}">
                 <div class="logo">
                     <span class="db"><img src="assets/images/logo-icon.png" alt="logo" /></span>
-                    <h5 class="font-medium m-b-20">Sign In to Admin</h5>
+                    <!-- <h5 class="font-medium m-b-20">Sign In to Admin</h5> -->
                 </div>
                 <div *ngIf="msg" class="alert alert-danger">{{ msg }}</div>
                 <!-- Form -->
@@ -43,11 +43,11 @@
                                 <div class="col-xs-12 p-b-20">
                                     <!-- <button class="btn btn-block btn-lg btn-info" type="button" (click)="check(u1.value, p2.value)">Log
                                     In</button> -->
-                                    <button class="btn btn-block btn-lg btn-info" type="button" (click)="check()">Log
+                                    <button class="btn btn-block btn-lg btn-cyan" type="button" (click)="check()">Log
                                       In</button>
                                 </div>
                             </div>
-                            <div class="row">
+                            <!-- <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center">
                                     <div class="social">
                                         <a href="javascript:void(0)" class="btn btn-facebook" data-toggle="tooltip" title=""
@@ -58,13 +58,13 @@
                                         </a>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="form-group m-b-0 m-t-10">
+                            </div> -->
+                            <!-- <div class="form-group m-b-0 m-t-10">
                                 <div class="col-sm-12 text-center">
-                                    Don't have an account? <a href="#/authentication/signup" class="text-info m-l-5"><b>Sign
+                                    Don't have an account? <a href="#/authentication/signup" class="text-primary m-l-5"><b>Sign
                                     Up</b></a>
                                 </div>
-                            </div>
+                            </div> -->
                         </form>
                     </div>
                 </div>
