--- a/src/app/shared/header-navigation/navigation.component.html
+++ b/src/app/shared/header-navigation/navigation.component.html
@@ -29,14 +29,14 @@
                     <ul class="list-style-none">
                         <li>
                             <div class="drop-title bg-primary text-white">
-                                <h4 class="m-b-0 m-t-5">4 New</h4>
+                                <!-- <h4 class="m-b-0 m-t-5">4 New</h4> -->
                                 <span class="font-light">Notifications</span>
                             </div>
                         </li>
-                        <li>
-                            <div class="message-center notifications" [perfectScrollbar]="config">
+                        <!-- <li> -->
+                            <!-- <div class="message-center notifications" [perfectScrollbar]="config"> -->
                                 <!-- Message -->
-                                <a href="javascript:void(0)" class="message-item" *ngFor="let notification of notifications">
+                                <!-- <a href="javascript:void(0)" class="message-item" *ngFor="let notification of notifications">
                                     <span class="btn btn-circle {{notification.btn}}">
                                         <i class="{{notification.icon}}"></i>
                                     </span>
@@ -45,9 +45,9 @@
                                         <span class="mail-desc">{{notification.subject}}</span>
                                         <span class="time">{{notification.time}}</span>
                                     </span>
-                                </a>
-                            </div>
-                        </li>
+                                </a> -->
+                            <!-- </div> -->
+                        <!-- </li> -->
                         <li>
                             <a class="nav-link text-center m-b-5" href="javascript:void(0);">
                                 <strong>Check all notifications</strong>
@@ -75,14 +75,14 @@
                     <ul class="list-style-none">
                         <li>
                             <div class="drop-title text-white bg-danger">
-                                <h4 class="m-b-0 m-t-5">5 New</h4>
+                                <!-- <h4 class="m-b-0 m-t-5">5 New</h4> -->
                                 <span class="font-light">Messages</span>
                             </div>
-                        </li>
+                        <!-- </li> -->
                         <li>
-                            <div class="message-center message-body" [perfectScrollbar]="config">
+                            <!-- <div class="message-center message-body" [perfectScrollbar]="config"> -->
                                 <!-- Message -->
-                                <a href="javascript:void(0)" class="message-item" *ngFor="let mymessage of mymessages">
+                                <!-- <a href="javascript:void(0)" class="message-item" *ngFor="let mymessage of mymessages">
                                     <span class="user-img">
                                         <img src="{{mymessage.useravatar}}" alt="user" class="rounded-circle">
                                         <span class="profile-status {{mymessage.status}} pull-right"></span>
@@ -92,9 +92,9 @@
                                         <span class="mail-desc">{{mymessage.subject}}</span>
                                         <span class="time">{{mymessage.time}}</span>
                                     </span>
-                                </a>
-                            </div>
-                        </li>
+                                </a> -->
+                            <!-- </div> -->
+                        <!-- </li> -->
                         <li>
                             <a class="nav-link text-center link" href="javascript:void(0);">
                                 <b>See all e-Mails</b>
@@ -124,26 +124,26 @@
                             <img src="assets/images/users/1.jpg" alt="user" class="img-circle" width="60">
                         </div>
                         <div class="m-l-10">
-                            <h4 class="m-b-0">Steave Jobs</h4>
-                            <p class=" m-b-0">varun@gmail.com</p>
+                            <h4 class="m-b-0">Admin</h4>
+                            <!-- <p class=" m-b-0">varun@gmail.com</p> -->
                         </div>
                     </div>
-                    <a class="dropdown-item" href="javascript:void(0)">
+                    <!-- <a class="dropdown-item" href="javascript:void(0)">
                     <i class="ti-user m-r-5 m-l-5"></i> My Profile</a>
                     <a class="dropdown-item" href="javascript:void(0)">
                     <i class="ti-wallet m-r-5 m-l-5"></i> My Balance</a>
                     <a class="dropdown-item" href="javascript:void(0)">
-                    <i class="ti-email m-r-5 m-l-5"></i> Inbox</a>
+                    <i class="ti-email m-r-5 m-l-5"></i> Inbox</a> -->
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="javascript:void(0)">
-                    <i class="ti-settings m-r-5 m-l-5"></i> Account Setting</a>
-                    <div class="dropdown-divider"></div>
+                    <!-- <a class="dropdown-item" href="javascript:void(0)">
+                     <i class="ti-settings m-r-5 m-l-5"></i> Account Setting</a> -->
+                    <div class="dropdown-divider"></div> 
                     <a class="dropdown-item" href="#">
                     <i class="fa fa-power-off m-r-5 m-l-5"></i> Logout</a>
                     <div class="dropdown-divider"></div>
-                    <div class="p-l-30 p-10">
+                    <!-- <div class="p-l-30 p-10">
                         <a href="javascript:void(0)" class="btn btn-sm btn-success btn-rounded">View Profile</a>
-                    </div>
+                    </div> -->
                 </div>
             </li>
             <!-- ============================================================== -->
